--- a/navigation_css/login.css
+++ b/navigation_css/login.css
@@ -3,12 +3,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .modal{
+    /* display: none; */
     position: fixed;
     top: 68px;
     bottom: 0;
     left: 0;
     right: 0;
-    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -34,6 +34,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 .modal__body__box {
+    /* display: none; */
     /* position: absolute;
     top: 50%;
     left: 50%; */
@@ -106,7 +107,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 12px;
 }
 
-.modal__body__box form button {
+.modal__body__box div button {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -349,4 +350,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
     margin-top: 8px;
     padding: 6px 8px;
+  }
+
+  .submit__row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
