--- a/navigation_css/login.css
+++ b/navigation_css/login.css
@@ -5,7 +5,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .modal{
     /* display: none; */
     position: fixed;
-    top: 68px;
+    /* top: 68px; */
     bottom: 0;
     left: 0;
     right: 0;
@@ -15,12 +15,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .modal__body{
     position: relative;
-    /* width: 100%; */
+    width: 100%;
     z-index: 10;
     /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 10px;
 }
 .modal-overlay{
     position: absolute;
@@ -34,7 +35,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 .modal__body__box {
-    /* display: none; */
+    display: none;
     /* position: absolute;
     top: 50%;
     left: 50%; */
@@ -118,7 +119,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     margin-bottom: 16px;
     letter-spacing: 3px;
     background-color: transparent;
