--- a/navigation_css/login.css
+++ b/navigation_css/login.css
@@ -6,6 +6,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     /* display: none; */
     position: fixed;
     /* top: 68px; */
+    top: 0px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -15,7 +16,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .modal__body{
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     z-index: 10;
     /* height: 100%; */
     display: flex;
