--- a/css/header.css
+++ b/css/header.css
@@ -362,6 +362,8 @@ i.fa-solid.fa-caret-up{
 .content {
     display: none;
     position: fixed;
+    flex-direction: column;
+    /* justify-content: space-between; */
     top: 0;
     /* opacity: 0; */
     /* left: -300px; */
@@ -411,6 +413,14 @@ i.fa-solid.fa-caret-up{
     margin-left: 15px;
     font-size: 16px;
 }
+.content .bxf {
+    display: flex;
+    align-items: center;
+    margin-right: 5px;
+    margin-left: 15px;
+    font-size: 15px;
+}
+
 
 .content__inner:hover {
     background-color: rgba(255, 255, 255, 0.1);
@@ -421,6 +431,18 @@ b.content__inner:hover{
     background-color: rgba(255, 255, 255, 0.1);
 }
 
+
+.content__logout{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 40px;
+}
+
+.content__logout__btn{
+    display: none;
+}
 
 .logo {
     height: 68px;
