--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,8 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
-    font-family: Overpass;
+    font-family: montserrat;
+    line-height: 1.4;
 }
 
 .header {
