--- a/css/tien.css
+++ b/css/tien.css
@@ -1,18 +1,41 @@
 /* lê văn tiến */
 .feedback {
-    margin-top: 40px;
+    padding-top: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.5);
+    margin-bottom: 16px;
+    color: white;
 }
-
+.feedback h1{
+    width: 100%;
+    font-size: 26px;
+    font-weight: 600;
+    /* text-shadow: 0 0 5px black; */
+}
+.feedback h2{
+    width: 85%;
+    font-size: 16px;
+    font-weight: 500;
+}
 .container__shop {
-    background-color: rgb(13, 13, 13);
+    background-image: url(../img/background/truong.jpg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     /* không cần cũng đc */
     /* width: 100%;
     height: 1100px; */
 }
 
 .container__images {
-    margin-top: 40px;
+    width: 95%;
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -22,17 +45,18 @@
 .image__item {
     flex-basis: calc(50% - 20px);
     /* Chiếm 50% chiều rộng của container trừ đi khoảng cách */
-    margin-bottom: 20px;
+    margin-bottom: 60px;
     text-align: center;
     position: relative;
     overflow: hidden;
     z-index: 4;
-    border-radius: 4px;
-    border: 2px solid #b1b1b1;
+    /* border-radius: 4px; */
+    /* border: 1px solid #b1b1b1; */
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 }
 
 .image__item img {
-    min-width: 360px;
+    /* min-width: 360px; */
     height: 100%;
     width: 100%;
     /* Chiều rộng tối đa trong container của mình */
@@ -43,26 +67,35 @@
 }
 
 .image__item h2 {
+    font-size: 14px;
+    font-weight: 500;
     position: absolute;
     bottom: 0px;
-    width: 85%;
+    width: 100%;
     text-align: start;
     padding: 10px 6px 6px;
-    background-color: #ff0436;
-    border-top-right-radius: 12px;
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 1);
+    /* border-top-right-radius: 12px; */
 }
 
 .image__item:hover img {
     filter: grayscale(0%);
-    transform: scale(1.1);
+    transform: scale(1.05);
     /* Phóng to hình ảnh lên 120% */
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.3s ease-in-out;
     /* Thêm hiệu ứng chuyển đổi mượt mà */
 }
 
 .container__story {
     text-align: center;
     background-color: rgb(14, 14, 14);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .container__story h1 {
@@ -71,7 +104,11 @@
     line-height: 2.8rem;
     padding: 22px 0 18px;
     font-weight: 800;
-    background-color: #000;
+    /* background-color: #000; */
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 1.4;
+    width: 95%;
 }
 
 
@@ -81,78 +118,84 @@
     align-items: center;
     flex-wrap: wrap;
     margin-top: 22px;
-    width: 100%;
+    width: 95%;
     display: flex;
     /* justify-content: space-between;
     align-content: flex-start; */
-    padding: 0 40px;
+    /* padding: 0 40px; */
     /* Thêm padding 40px vào hai bên */
     box-sizing: border-box;
     /* Đảm bảo padding không làm tăng kích thước tổng thể */
 }
 
-.change__weightcalculation {
-    display: flex;
-    flex-direction: column;
-    margin: 12px 42px;
-    flex-basis: calc(50% - 20px);
-    /* Chiếm 50% chiều rộng của container trừ đi khoảng cách giữa các phần tử */
-    text-align: left;
-}
+
 
 
 .change__box {
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 18px;
     width: 100%;
 }
 
-.change__box:last-child {
+/* .change__box:last-child {
     display: flex;
     flex-direction: row-reverse;
-}
+} */
 
 .change__box__text {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     flex: 2;
     margin-top: 20px;
-    min-width: 300px;
+    /* min-width: 300px; */
+    width: 50%;
 }
 
 .change__box__text h2 {
     font-size: 2.4rem;
     line-height: 24px;
-    margin-bottom: 6px;
+    margin-bottom: 16px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.4;
 }
 
 .change__box__text p {
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 18px;
-    margin-left: 4px;
+    /* margin-left: 4px; */
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.4;
+    width: 90%;
+    max-width: 680px;
+    text-align: justify;
 }
 
 .change__box__img {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    flex: 3;
+    /* flex: 3; */
+    width: 50%;
 }
 
 .change__box__img img {
-    min-width: 350px;
+    /* min-width: 350px; */
     max-width: 680px;
     width: 100%;
     height: auto;
     object-fit: scale-down;
     /* Đảm bảo ảnh không vượt quá kích thước của phần tử cha */
-    border: 2px solid #000;
-    box-shadow: 10px 10px 5px #21212117;
-    border-radius: 5px;
+    /* border: 1px solid rgb(255, 255, 255); */
+    /* box-shadow: 10px 10px 5px #21212117; */
+    /* border-radius: 5px; */
 }
 
 .bmi__form {
@@ -184,16 +227,23 @@
 }
 
 /* change__input */
-.change__weightcalculation {
-    position: relative;
-    padding: 20px 20px;
-}
 
+.change__weightcalculation {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* margin: 12px 42px; */
+    flex-basis: calc(50% - 20px);
+    /* Chiếm 50% chiều rộng của container trừ đi khoảng cách giữa các phần tử */
+    text-align: left;
+    position: relative;
+    padding: 20px;
+}
 
 .change__input {
     display: flex;
     flex-wrap: wrap;
-    padding-right: 50px;
+    /* padding-right: 50px; */
 }
 
 
@@ -212,35 +262,44 @@
 
 .change__input input,
 .change__input select {
-    width: 180px;
-    font-weight: 600;
-    font-size: 1.8rem;
+    width: 25%;
+    min-width: 180px;
+    font-family: montserrat;
+    font-weight: 500;
+    font-size: 14px;
     padding: 8px 12px 4px;
     color: #000;
     outline: none;
     border: 2px solid #333;
+    border: none;
     border-radius: 4px;
     margin-top: 4px;
     margin-right: 4px;
     z-index: 3;
+    margin: 5px;
 }
 
 .change__submit {
     position: relative;
-    font-size: 1.6rem;
+    font-size: 14px;
     width: 180px;
     margin-top: 8px;
     padding: 12px 12px 8px;
-    color: #000;
-    font-weight: 700;
+    font-weight: 600;
     cursor: pointer;
     border: 1px solid #333;
     border-radius: 4px;
     color: #fff;
-    background-color: #ff0436;
+    background-color: rgb(170, 0, 0);
     z-index: 4;
+    margin: 5px;
 }
-
+button.change__submit{
+    color: #000;
+}
+.change__submit:hover{
+    background-color: rgb(190, 0, 0);
+}
 .change__input__error {
     color: #ff738f;
     z-index: 2;
@@ -347,14 +406,10 @@
     /* Màu nền cho phần tử cha */
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
 
     .image__item {
         flex-basis: calc(100% - 2px);
-    }
-
-    .image__item h2 {
-        width: 94%;
     }
 
     .image__item img {
@@ -369,7 +424,7 @@
 
 
 .change__box__img img {
-    border-radius: 5px;
+    /* border-radius: 5px; */
     cursor: pointer;
     transition: 0.3s;
 }
@@ -473,4 +528,44 @@
     .modal-content {
         width: 100%;
     }
+}
+
+@media (max-width: 900px) {
+    .change__box{
+        flex-direction: column;
+        width: 100%;
+    }
+    .change__box__text{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .change__box__text p{
+        width: 90%;
+    }
+    .change__box__img{
+        width: 100%;
+        border-radius: 0;
+    }
+}
+@media screen and (max-width: 806px) {
+    .change__input input,
+.change__input select {
+    width: 30%;
+}
+}
+@media screen and (max-width: 540px) {
+    .feedback h2{
+        width: 90%;
+        text-align: justify;
+    }
+}
+@media screen and (max-width: 626px) {
+    .change__input input,
+.change__input select {
+    width: 90%;
+}
+}
+
+.footer{
+    overflow: hidden;
 }
