--- a/css/tu.css
+++ b/css/tu.css
@@ -1,5 +1,6 @@
 .container__service{
-    min-height: calc(100vh - 68px);
+    /* min-height: calc(100vh - 68px); */
+    height: auto;
     margin-top: 22px;
     background: linear-gradient(#212121d1, #212121d1),
     url("https://img4.thuthuatphanmem.vn/uploads/2021/01/07/background-phong-tap-gym_035832535.jpg");
@@ -8,13 +9,15 @@
     position: relative;
     text-align: center;
     padding: 0 8px;
+    padding-bottom: 50px;
 }
 .container__service__title{
     width: 100%;
     padding-top: 30px;
     font-size: 26px;
-    font-weight: 700;
-    line-height: 35px;
+    font-weight: 600;
+    line-height: 1.4;
+    font-family: montserrat;
 }
 .container__service__img:hover{
     color: pink;
@@ -30,14 +33,15 @@
 .container__service__uses p{
     /* width: ; */
     line-height: 20px;
-    font-size: 15px;
-    max-width: 600px;
-    width: 100%;
-    min-width: 300px;
+    font-size: 16px;
+    /* max-width: 600px; */
+    width: 90%;
     font-weight: normal;
     margin: 0px auto;
     margin-bottom: 30px;
     text-align: center;
+    line-height: 1.4;
+    font-family: montserrat;
 }
 .container__service__img{
     display: flex;
@@ -46,7 +50,7 @@
     width: 100%;
     height: 100%;
     /* display: inline-block; */
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     flex-wrap: wrap;
     /* text-align: center; */
 
@@ -63,16 +67,15 @@
 .container__service__img__items{
     flex-direction: column;
     display: flex;
+    align-items: center;
     /* max-width: 178px; */
     /* padding: 12px 6px 4px; */
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-bottom: 8px;
-    border: 1px solid #efdddd;
-    border: 2px solid #000;
+    margin: 16px;
+    /* border: 1px solid #efdddd; */
+    /* border: 2px solid #000; */
     border-radius: 2px;
-    background-color: #d5d5d5;
-    box-shadow: 8px 6px 18px 2px rgba(160, 160, 160, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
     /* min-height: 305px; */
     position: relative;
@@ -82,18 +85,20 @@
     min-height: 192px;
     /* max-height: 222px; */
     height: 100%;
-    border: 2px solid #888888;
-    border-radius: 2px;
+    border: 1px solid rgba(150, 0, 0, 0.5);
+    /* border-radius: 5px; */
     overflow: hidden;
+    line-height: 1.3;
 }
+
 
 .container__service__img__items:hover a {
     left: 0;
 }
 
-.container__service__img__items a:hover {
-    background-color: #333333;
-}
+/* .container__service__img__items a:hover {
+    background-color: #ca0000;
+} */
 
 .container__service__img__items__link{
     position: absolute;
@@ -103,12 +108,14 @@
     padding: 18px;
     width: 100%;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 15px;
+    font-family: montserrat;
     color: white;
-    border-radius: 0 5px 5px 0;
+    /* border-radius: 0 5px 5px 0; */
     bottom: 0;
-    background-color: #555;
-    font-family: Inter;
+    background-color: rgb(140, 0, 0);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    height: 58px;
 }
 
 .container__service__img__items::after{
@@ -137,15 +144,17 @@
 }
 .container__service__img__items span{
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 14px;
     /* max-width: 212px; */
     color: rgb(255, 255, 255);
-    background-color: #3d3d3d;
     /* margin-top: 8px; */
     min-height: 52px;
     padding: 8px 2px;
     z-index: 0;
-    font-family: Inter;
+    max-width: 200px;
+    min-height: 58px;
+    font-family: montserrat;
+    line-height: 1.4;
 }
 
 
@@ -177,5 +186,14 @@
         /* max-width: 192px;
         width: 100%; */
         
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .container__service__img__items{
+        max-width: 500px;
+        width: 90%;
+        margin: 0;
+        margin-bottom: 50px;
     }
 }
