--- a/navigation_css/information_card_TS.css
+++ b/navigation_css/information_card_TS.css
@@ -5,14 +5,14 @@
 .footer{
     overflow: hidden;
 }
-/* .container{ 
+.container{ 
     height: auto;
     width: 100%;
     margin-top: 68px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-} */
+}
 .container__inner{
     height: auto;
     max-width: 1200px;
