--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -65,13 +65,17 @@
 }
 
 @keyframes fadeOut {
-    from {
+    0% {
         top: 50%;
         opacity: 0;
         scale: 0.8;
     }
-
-    to {
+    50%{
+        top: 90%;
+        opacity: 0;
+        scale: 0.9;
+    }
+    100% {
         top: 100%;
         opacity: 1;
         scale: 1;
