--- a/navigation_css/personal_trainer.css
+++ b/navigation_css/personal_trainer.css
@@ -51,5 +51,11 @@
 }
 video{
     display: flex;
-    width: 100%;
+    height: 100vh;
+    /* width: 100%; */
+}
+@media (max-width:1000px) {
+    .container{
+        /* margin-top: 68px; */
+    }
 }
