--- a/navigation_css/personal_trainer.css
+++ b/navigation_css/personal_trainer.css
@@ -46,13 +46,15 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background-color: green;
+    /* background-color: green; */
     overflow: hidden;
 }
 video{
     display: flex;
     height: 100vh;
-    /* width: 100%; */
+    width: 100vw;
+    background-size: cover;
+    object-fit: cover;
 }
 @media (max-width:1000px) {
     .container{
