--- a/navigation_css/personal_trainer.css
+++ b/navigation_css/personal_trainer.css
@@ -1,5 +1,7 @@
 *{
     font-family: montserrat;
+    /* font-size: 16px; */
+    line-height: 1.5;
     /* overflow: hidden; */
 }
 .header{
@@ -146,15 +148,12 @@ video{
     box-sizing: inherit;
     padding: 15px;
 }
-.row img{
-    width: 100%;
-    height: 100%;
-}
 #colum{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 33.3333333%;
+    height: fit-content;
     padding: 10px;
     position: relative;
 }
@@ -164,26 +163,38 @@ video{
     align-items: center;
     flex-direction: column;
     width: 100%;
+    height: fit-content;
     overflow: hidden;
-    box-sizing: inherit;
+    /* box-sizing: inherit; */
     position: relative;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.box__container .overlayimg{
+}.overlayimg{
     width: 100%;
+    height: fit-content;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.overlayimg img{
+    width: 100%;
+    position: 0 50%;
+    /* height: fit-content; */
+    /* min-height: 222px; */
 }
 .title__bar{
     width: 100%;
     position: absolute;
     bottom: 0;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 30px 0;
     background-color: rgba(0, 0, 0, 0.47);
     box-shadow: 0 0 60px 50px rgba(0, 0, 0, 0.5);
     z-index: 1;
-    box-sizing: inherit;
 }
 .title__bar a{
     border-radius: 50px;
@@ -536,8 +547,8 @@ video{
         display: none;
     }
     .box__container{
-        margin: 10px;
-        height: -webkit-fill-available;
+        margin: 16px;
+        /* height: -webkit-fill-available; */
     }
     .cheer{
         flex-direction: column;
@@ -585,6 +596,9 @@ video{
     #colum{
         flex-direction: column;
     }
+    /* .overlayimg img{
+        min-height: 289px;
+    } */
 }
 @media screen and (max-width:480px) {
     .title{
