--- a/css/tu.css
+++ b/css/tu.css
@@ -4,6 +4,7 @@
     margin-top: 22px;
     background: linear-gradient(#212121d1, #212121d1),
     url("https://img4.thuthuatphanmem.vn/uploads/2021/01/07/background-phong-tap-gym_035832535.jpg");
+    /* background-color:white; */
     color: white;
     background-size: cover;
     position: relative;
@@ -49,14 +50,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
-    /* display: inline-block; */
-    /* margin-bottom: 50px; */
-    flex-wrap: wrap;
-    /* text-align: center; */
-
  }
-
-
 
 
  
@@ -68,27 +62,32 @@
     flex-direction: column;
     display: flex;
     align-items: center;
-    /* max-width: 178px; */
-    /* padding: 12px 6px 4px; */
-    margin: 16px;
-    /* border: 1px solid #efdddd; */
-    /* border: 2px solid #000; */
     border-radius: 2px;
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
-    /* min-height: 305px; */
     position: relative;
-    max-width: 222px;
-    width: 100%;
-    min-width: 168px;
+    margin: 32px;
+
+    /* max-width: 222px; */
+    width: calc((100% / 3) - 64px);
+    /* min-width: 168px; */
+
     min-height: 192px;
-    /* max-height: 222px; */
     height: 100%;
     border: 1px solid rgba(150, 0, 0, 0.5);
-    /* border-radius: 5px; */
     overflow: hidden;
     line-height: 1.3;
+}
+@media screen and (max-width: 1024px) {
+    .container__service__img__items{
+        width: calc((100% / 2) - 64px);
+    }
+}
+@media screen and (max-width: 768px) {
+    .container__service__img__items{
+        width: calc((100% / 1) - 64px);
+    }
 }
 
 
