--- a/css/tien.css
+++ b/css/tien.css
@@ -17,12 +17,17 @@
     /* text-shadow: 0 0 5px black; */
 }
 .feedback h2{
-    width: 85%;
+    width: 100%;
     font-size: 16px;
     font-weight: 500;
+    padding: 0 5%;
+    line-height: 1.5;
 }
 .container__shop {
-    background-image: url(../img/background/truong.jpg);
+    background-image: url(../img/background/bgr_pro.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,13 +44,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* padding: 20px; */
+    margin: 100px 0;
 }
 
 .image__item {
-    flex-basis: calc(50% - 20px);
+    flex-basis: calc(50% - 64px);
     /* Chiếm 50% chiều rộng của container trừ đi khoảng cách */
-    margin-bottom: 60px;
+    margin: 32px;
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -73,10 +78,10 @@
     bottom: 0px;
     width: 100%;
     text-align: start;
-    padding: 10px 6px 6px;
+    padding: 0 16px 5px 16px;
     border-radius: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 16px rgba(0, 0, 0, 1);
+    box-shadow: 0 0 32px 64px rgba(0, 0, 0, 0.5);
     /* border-top-right-radius: 12px; */
 }
 
