--- a/css/tien.css
+++ b/css/tien.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 100px 0;
+    margin-bottom: 50px;
 }
 
 .image__item {
@@ -91,6 +91,11 @@
     /* Phóng to hình ảnh lên 120% */
     transition: transform 0.3s ease-in-out;
     /* Thêm hiệu ứng chuyển đổi mượt mà */
+}
+@media screen and (max-width: 768px) {
+    .image__item{
+        margin: 10px;
+    }
 }
 
 .container__story {
